<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.vinay.calendarview.MainActivity" >

    <item
        android:id="@+id/eventlist"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/eventlist"/>
    
        <item
        android:id="@+id/preferences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/pref"/>
       
        <item
        android:id="@+id/update"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/update"/>
        
        <item
        android:id="@+id/Information"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/info"/>
        
        <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>
