<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#708090"

        android:text="@string/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox2"
		android:textColor="#708090"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:textColor="#708090"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:textColor="#708090"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:textColor="#708090"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/checkBox5" />

</LinearLayout>
